--- a/css/blog.css
+++ b/css/blog.css
@@ -1,301 +1,198 @@
+/* CORPO DO SITE */
 body {
-    margin: 0;
-	padding: 0;
 	background-image: url('../imagens/fundo.png');
 	font-family: Gill Sans MT, sans-serif;
-	font-size: 62.5%;
-	color: #333;
 	background-color: rgba(255, 255, 255, 0.5);
+	background-repeat: no-repeat;
+	background-size: cover;
+	margin: 0;
+	padding: 0;
 }
-	}
-h1, h2, p, ul, li {
-    margin: 0;
-    padding: 0;
+
+.borda{
+	width: 80%
+	height: 100%;
+	border: 2px solid #696969;
+	margin: 0 5%;
+	background-color: rgba(255, 255, 255, 0.8);
 }
-header img {
-	max-height:640px;
-	max-width:1120px;
-	width:100%;
-	height:30%;
+
+header img{
+	width: 90%;
+	height: 40%;
+	margin: 3% 5%;
 }
-p {
-	font-size: 5.4 em;
-	line-height: 5.4 em;
-}
-ul {
+
+ul{
 	list-style-type: none;
 }
-a:link, a:visited {
-	color: #333;
-	background:#00BFFF;
-	text-decoration:none;
 
-}
 
-nav {
-	background:#00BFFF;
-	font-size:1.4 em;
-	margin-top:10px;
-	width:1152px;
-	margin-left:0;
-	opacity:2;
-}
 .menu{
-list-style:none;  
-float:left; 
-background-color:#00BFFF;
-width:1137px;
-}
-.menu li{ /* LISTA NAV */
-position:relative; 
-float:center; 
-width:180px;
-background-color:#00BFFF;
-margin-left:3px;
-padding-top:1px;
-padding-left:75px;
-padding-right:75px;
-padding-bottom:1px;
-}
-.menu li  ul{ /* MENU DROPDOWN */
-position:absolute;
-top:15px; 
-display:none;
-text-align:left;
-padding-top:0%;
-margin-top:5%;
-}   
-.menu li:hover ul, .menu li.hover ul{display:block;}, {filter: alpha (opacity=65);}
-
-.menu li ul li{ /* LISTA DROPDOWN */
-width:200px;
-height:30px;
-font-size:0.8em;
-margin:left;
-float:left;
-margin-left:173%;
-border: 1px solid black;
-padding-top: 5px;
-padding-right: 5px;
-padding-left: 5px;
+	display: inline-block;
+	width: 100%;
+	background-color:#00BFFF;
+	font-size: 1.3em;
+	height: 10%;
+	text-align: center;
 }
 
-nav h1 { /* PARA NÃO GASTAR TEMPO E FICAR CRIANDO CLASSES PODEMOS UTILIZAR A SEÇÃO (nav, article, section, bottom) COM O ATRIBUTO NA FRENTE DAQUELA SESSÃO */
-    color:white;
-	
+.menu ul {
+	margin-top: 1.5%;
 }
+.menu ul li{
+	padding: 0 5%;
+  	display: inline;
+  	height: 20px;
+ }
 
-nav ul{
-	padding: 8px;
-	margin: 5px 0px 5px 0px;
-	font-size: 23px;
-	font-weight: bolder;
-	color:white;
-}
+ .menu ul li a{
+ 	text-decoration: none;
+ 	color: #fff;
+ }
 
-nav li {
-	display: inline;
-	margin: 0 0 0 80px;
-	color:black;
-	font-size:25.5px;
-	}
-nav li a:link,nav li a:visited{
-    text-decoration:none;
-	color:black;
-	}
-nav li a:hover, nav li:hover {
-	color:white;
-}	
-	
-/* SEÇÃO DO SITE */
-section{ 
-	margin-left:150px;
-	padding: 20px;
-	width: 1160px;
-	background: #fff;
-	border: 3px solid #808080;
-	margin-left:auto;
-	margin-right:auto;
-	background-color: rgba(255, 255, 255, 0.8);
-	
-}
+ .menu a:hover{
+ 	cursor: pointer;
+  	border-bottom: 2px solid #D3D3D3;
+ }
 
-/* ARTICLE PRINCIPAL */
+ #Home h2, #Fatec h2, #Contato h2, #Hobbies h2{
+ 	font-family: 'Arial', sans-serif;
+ 	font-size: 2em;
+ 	text-align: center;
+ 	margin: 3%;
+ }
 
-article.principal, aside {
-	width: 460px;
-	margin-left: -3px;
-	padding: 10px;
-	opacity:75;
-}
-article.principal {
-	float: left; /* foi jogado pra esquerda */
-	width:1200px;
-	opacity:75;
-}
+ #Home img{
+ 	width: 20%;
+ 	padding:0 3%;
+ 	float: left;
+ }
 
-/* ARTICLE FATEC */
-article {
-    float: left; /* foi jogado pra esquerda */
-	width:580px;
-}
-article h1 {
-	font-size: 4em;
-}
+ #Home p, #Fatec p, #Hobbies p{
+ 	font-family: 'Verdana';
+ 	font-size: 1.5em;	
+ 	text-align: justify;
+ 	margin: 2% 3%;
+ }
 
-article h2 {
-	font-size: 5em;
-	margin: 0 0 10px 0;
-	padding-top:10px;
-}
+ #Galeria{
+ 	display: flex;
+ 	flex-wrap:wrap;
+ 	flex-direction: row;
+ 	flex-flow: row wrap;
+ }
 
-article p { /* parágrafo do artigo */
-	margin: 0 50px 10px 0;
-	margin-top:10px;
-	font-size:27px;
-	width:600px;
-}
-article p.leonardo { /* PARÁGRAFO DO ARTIGO LEONARDO */
-	width:1100px;
-}
-article ul {
-	margin: 80px 0 0 0;
-	font-size: 3.4em;
-	text-decoration:none;
-}
+ #Galeria img{
+ 	width:30%;
+ 	height:40vh;
+ 	padding:0 1%;
+ 	margin:5% auto;
+ 	flex: auto;
+ }
+ #Jogos{
+ 	display: flex;
+ 	flex-direction: row wrap;
+ 	flex: 1;
+ }
+ #Jogos img{
+ 	width:30%;
+ 	height:40vh;
+ 	padding:0 1%;
+ 	margin:3% auto;
+ }
 
-article ul  li {
-	margin: 0 0 10px 0;
-	text-decoration:none;
-	margin-top:-50px;
-	margin-left:-35px;
-	font-size:30px;
-	padding-left:0px;
-	padding-top:-20px;
-	padding-bottom: 40px;
-}
-article ul.indexfatec {
-	margin-top:80px;
-	margin-left:32px;
-	font-size:80px;
-	padding-left:0px;
-	padding-top:-50px;
-	padding-bottom: 40px;
-}
-article a:link, article a:visited{
-	text-decoration:none;
-	background:white;
-	background-color: rgba(255, 255, 255, 0.5);
-}
-article a:hover{
-	color:grey;
-}
-article img {
-	width:220px;
-	height:220px;
-	padding:0px 10px 20px 20px;
-	float:left;
-}
+ .linkfatec{
+ 	color: #000000;
+	font-size: 1em;
+	padding: 1%;
+	text-decoration: none;
+	box-sizing: border-box;
+	border: 1px solid red;
+	width: 13%;
+	text-align: center;
+	text-transform: uppercase;
+	border-radius: 20px;
+	margin-left: 45%;
+ }
 
-/* ARTICLE FATECLOGO E LOGO BUZO */
+ .linkfatec:hover{
+ 	color: #0000FF;
+ 	border: 1px solid #0000FF;
+ 	transition: 500ms linear;
+ }
 
-article img.fateclogo {
-	width:260px;
-	height:140px;
-	margin-top:-108px;
-	padding-left:480px;
-	margin-right:-500px;
-}
-article img.buzologo{
-	width:220px;
-	height:180px;
-	margin-top:-125px;
-	padding-left:540px;
-}
-article.fateclogo {
-	background-color:white;
-	opacity:75;
+ #Contato p{
+ 	text-align: center;
+ 	padding: 1%;
+ }
+ form{
+ 	width: 50%;
+ 	margin: 1% auto;
+ }
 
-}
-article.fateclogo ul {
-	margin-right:0px;
-	padding-right:0px;
-}
-article.fateclogo ul li {
-	margin-right:0px;
-	padding-right:0px;
-}
-
-/* ASIDE FATEC */
-
-aside {
-	float: right;
-	background: #eee;
-	padding:20px;
-	padding-left: 30px;
-	padding-right: 30px;
-	padding-top:5px;
-	margin:20px;
-	position:auto;
-
-}
-
-aside h2 {
-	border-bottom: 5px solid #ccc;
-	margin: 0 0 30px 0;
-	padding: 20px;
-	font-size:30px;
-}
-
-aside li {
-	margin: 0 10px 10px 0; /* são quatro pois representa os 4 cantos da margem */
-	float: left;
-	border: 4px solid #ddd;
-}
-
-aside img {
-height: 340px;
-width: 400px;
-}
-aside p {
-	font-size:18px;
-	padding:0px 0px 0px 0px;
-}
-
-/* ASIDE CONTATO */
-
-aside.contato {
-	float: right;
-	background: white;
-	padding:20px;
-	padding-left:60px;
-	padding-top:-100px;
-	margin-top:-30px;
-	margin:0px;
-	background-color: rgba(255, 255, 255, 0.5);
-}
-aside.contato p {
-	font-size:2.8em;
-	margin-left:-35px;
-}
-
-/* FORMULARIO CONTATO */
-
-.placeholder{
-	font-size:25px;
-	width:600px;
-}
-
+ fieldset{
+ 	padding: 2%;
+ }
 
 /* FOOTER */ 
 
-footer {
-	clear: both;
-	background: #eee;
-	padding: 10px;
-	margin:-12px;
-	border-top: 2px solid #ddd;
-	text-align: center;
-	color: #777;
+footer{
+  clear: both;
+  border-top: solid 2px #696969;
+  background-color: #f1f1f1;
+  color:#000000;
+  height: 60px;
+  padding: 0;
+  margin: 0;
 }
-	
+
+footer p{
+  text-align: center;
+  margin: 2% auto;
+  padding: 0;
+}
+
+@media (max-width: 768px) {
+
+	.menu {
+		height: auto;
+
+	}
+	.menu ul li {
+		display: block;
+		width: 100%;
+		padding: 0;
+		padding-top: 10px;
+	}
+	#Home img {
+		display: block;
+		margin: auto;
+		width: 80%;
+		float: none;
+		flex: auto;
+	}
+	#Galeria {
+		display: flex;
+		flex-direction: column;
+		flex: 1;
+	}
+	#Galeria img{
+		width:96%;
+		padding:1%;
+		margin:5;
+	}
+	#Jogos {
+		display: flex;
+		flex-direction: column;
+		flex: 1;
+	}
+	#Jogos img {
+		width:96%;
+	}
+	#Contato{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+}
